--- a/index.html
+++ b/index.html
@@ -344,9 +344,9 @@
       <div class="logo">DigiToolsX</div>
       <nav>
         <a href="#">Home</a>
-        <a href="#">Image Tools</a>
-        <a href="#">PDF Tools</a>
-        <a href="#">Calculators</a>
+        <a href="image-tools/index.html">Image Tools</a>
+        <a href="pdf-tools/index.html">PDF Tools</a>
+        <a href="calculator/index.html">Calculators</a>
         <a href="#">About</a>
         <a href="#">Contact</a>
       </nav>
@@ -360,8 +360,8 @@
       <h1>Your All-in-One Toolkit for Digital Solutions</h1>
       <p>Convert, edit, and optimize with ease using DigiToolsX.</p>
       <div class="cta-buttons">
-        <a href="/image-tools">Try Image Tools</a>
-        <a href="/pdf-tools">Explore PDF Tools</a>
+        <a href="image-tools/index.html">Try Image Tools</a>
+        <a href="pdf-tools/index.html">Explore PDF Tools</a>
       </div>
     </div>
   </section>
@@ -375,19 +375,19 @@
           <img src="https://via.placeholder.com/50" alt="Image Compressor">
           <h3>Image Compressor</h3>
           <p>Reduce image size without losing quality.</p>
-          <a href="/image-compressor">Use Tool</a>
+          <a href="image-compressor/index.html">Use Tool</a>
         </div>
         <div class="tool-card">
           <img src="https://via.placeholder.com/50" alt="PDF Merger">
           <h3>PDF Merger</h3>
           <p>Combine multiple PDFs into one.</p>
-          <a href="/pdf-merger">Use Tool</a>
+          <a href="pdf-merger/index.html">Use Tool</a>
         </div>
         <div class="tool-card">
           <img src="https://via.placeholder.com/50" alt="Calculator">
           <h3>Calculator</h3>
           <p>Simple and advanced calculations.</p>
-          <a href="/calculator">Use Tool</a>
+          <a href="calculator/index.html">Use Tool</a>
         </div>
       </div>
     </div>
