--- a/index.html
+++ b/index.html
@@ -163,6 +163,12 @@
       box-shadow: 0 6px 8px rgba(0, 0, 0, 0.15);
     }
 
+    .tool-card a.disabled {
+      background: #ccc;
+      cursor: not-allowed;
+      pointer-events: none;
+    }
+
     /* Categories Section */
     .categories {
       padding: 60px 0;
@@ -344,9 +350,9 @@
       <div class="logo">DigiToolsX</div>
       <nav>
         <a href="#">Home</a>
-        <a href="image-tools/index.html">Image Tools</a>
-        <a href="pdf-tools/index.html">PDF Tools</a>
-        <a href="calculator/index.html">Calculators</a>
+        <a href="image-compressor/index.html">Image Tools</a>
+        <a href="#" class="disabled">PDF Tools</a>
+        <a href="#" class="disabled">Calculators</a>
         <a href="#">About</a>
         <a href="#">Contact</a>
       </nav>
@@ -360,8 +366,8 @@
       <h1>Your All-in-One Toolkit for Digital Solutions</h1>
       <p>Convert, edit, and optimize with ease using DigiToolsX.</p>
       <div class="cta-buttons">
-        <a href="image-tools/index.html">Try Image Tools</a>
-        <a href="pdf-tools/index.html">Explore PDF Tools</a>
+        <a href="image-compressor/index.html">Try Image Tools</a>
+        <a href="#" class="disabled">Explore PDF Tools</a>
       </div>
     </div>
   </section>
@@ -381,13 +387,13 @@
           <img src="https://via.placeholder.com/50" alt="PDF Merger">
           <h3>PDF Merger</h3>
           <p>Combine multiple PDFs into one.</p>
-          <a href="pdf-merger/index.html">Use Tool</a>
+          <a href="#" class="disabled">Use Tool</a>
         </div>
         <div class="tool-card">
           <img src="https://via.placeholder.com/50" alt="Calculator">
           <h3>Calculator</h3>
           <p>Simple and advanced calculations.</p>
-          <a href="calculator/index.html">Use Tool</a>
+          <a href="#" class="disabled">Use Tool</a>
         </div>
       </div>
     </div>
