--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       margin-bottom: 40px;
     }
 
-    .hero .cta-buttons a {
+    .hero .cta-buttons button {
       background: #FFC107;
       color: #333;
       padding: 15px 30px;
@@ -93,10 +93,9 @@
       cursor: pointer;
       box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
       transition: transform 0.2s ease, box-shadow 0.2s ease;
-      display: inline-block;
     }
 
-    .hero .cta-buttons a:hover {
+    .hero .cta-buttons button:hover {
       transform: translateY(-2px);
       box-shadow: 0 6px 8px rgba(0, 0, 0, 0.15);
     }
@@ -146,7 +145,7 @@
       margin-bottom: 20px;
     }
 
-    .tool-card a {
+    .tool-card button {
       background: #007BFF;
       color: white;
       padding: 10px 20px;
@@ -155,18 +154,11 @@
       cursor: pointer;
       box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
       transition: transform 0.2s ease, box-shadow 0.2s ease;
-      display: inline-block;
     }
 
-    .tool-card a:hover {
+    .tool-card button:hover {
       transform: translateY(-2px);
       box-shadow: 0 6px 8px rgba(0, 0, 0, 0.15);
-    }
-
-    .tool-card a.disabled {
-      background: #ccc;
-      cursor: not-allowed;
-      pointer-events: none;
     }
 
     /* Categories Section */
@@ -350,9 +342,9 @@
       <div class="logo">DigiToolsX</div>
       <nav>
         <a href="#">Home</a>
-        <a href="image-compressor/index.html">Image Tools</a>
-        <a href="#" class="disabled">PDF Tools</a>
-        <a href="#" class="disabled">Calculators</a>
+        <a href="#">Image Tools</a>
+        <a href="#">PDF Tools</a>
+        <a href="#">Calculators</a>
         <a href="#">About</a>
         <a href="#">Contact</a>
       </nav>
@@ -366,8 +358,8 @@
       <h1>Your All-in-One Toolkit for Digital Solutions</h1>
       <p>Convert, edit, and optimize with ease using DigiToolsX.</p>
       <div class="cta-buttons">
-        <a href="image-compressor/index.html">Try Image Tools</a>
-        <a href="#" class="disabled">Explore PDF Tools</a>
+        <button>Try Image Tools</button>
+        <button>Explore PDF Tools</button>
       </div>
     </div>
   </section>
@@ -381,19 +373,19 @@
           <img src="https://via.placeholder.com/50" alt="Image Compressor">
           <h3>Image Compressor</h3>
           <p>Reduce image size without losing quality.</p>
-          <a href="image-compressor/index.html">Use Tool</a>
+          <button>Use Tool</button>
         </div>
         <div class="tool-card">
           <img src="https://via.placeholder.com/50" alt="PDF Merger">
           <h3>PDF Merger</h3>
           <p>Combine multiple PDFs into one.</p>
-          <a href="#" class="disabled">Use Tool</a>
+          <button>Use Tool</button>
         </div>
         <div class="tool-card">
           <img src="https://via.placeholder.com/50" alt="Calculator">
           <h3>Calculator</h3>
           <p>Simple and advanced calculations.</p>
-          <a href="#" class="disabled">Use Tool</a>
+          <button>Use Tool</button>
         </div>
       </div>
     </div>
