--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       margin-bottom: 40px;
     }
 
-    .hero .cta-buttons button {
+    .hero .cta-buttons a {
       background: #FFC107;
       color: #333;
       padding: 15px 30px;
@@ -93,9 +93,10 @@
       cursor: pointer;
       box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
       transition: transform 0.2s ease, box-shadow 0.2s ease;
+      display: inline-block;
     }
 
-    .hero .cta-buttons button:hover {
+    .hero .cta-buttons a:hover {
       transform: translateY(-2px);
       box-shadow: 0 6px 8px rgba(0, 0, 0, 0.15);
     }
@@ -145,7 +146,7 @@
       margin-bottom: 20px;
     }
 
-    .tool-card button {
+    .tool-card a {
       background: #007BFF;
       color: white;
       padding: 10px 20px;
@@ -154,9 +155,10 @@
       cursor: pointer;
       box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
       transition: transform 0.2s ease, box-shadow 0.2s ease;
+      display: inline-block;
     }
 
-    .tool-card button:hover {
+    .tool-card a:hover {
       transform: translateY(-2px);
       box-shadow: 0 6px 8px rgba(0, 0, 0, 0.15);
     }
@@ -358,8 +360,8 @@
       <h1>Your All-in-One Toolkit for Digital Solutions</h1>
       <p>Convert, edit, and optimize with ease using DigiToolsX.</p>
       <div class="cta-buttons">
-        <button>Try Image Tools</button>
-        <button>Explore PDF Tools</button>
+        <a href="/image-tools">Try Image Tools</a>
+        <a href="/pdf-tools">Explore PDF Tools</a>
       </div>
     </div>
   </section>
@@ -373,19 +375,19 @@
           <img src="https://via.placeholder.com/50" alt="Image Compressor">
           <h3>Image Compressor</h3>
           <p>Reduce image size without losing quality.</p>
-          <button>Use Tool</button>
+          <a href="/image-compressor">Use Tool</a>
         </div>
         <div class="tool-card">
           <img src="https://via.placeholder.com/50" alt="PDF Merger">
           <h3>PDF Merger</h3>
           <p>Combine multiple PDFs into one.</p>
-          <button>Use Tool</button>
+          <a href="/pdf-merger">Use Tool</a>
         </div>
         <div class="tool-card">
           <img src="https://via.placeholder.com/50" alt="Calculator">
           <h3>Calculator</h3>
           <p>Simple and advanced calculations.</p>
-          <button>Use Tool</button>
+          <a href="/calculator">Use Tool</a>
         </div>
       </div>
     </div>
