--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
       <h2>Popular Tools</h2>
       <div class="tool-cards">
         <div class="tool-card">
-          <img src="https://via.placeholder.com/50" alt="Image Compressor">
+          <img src="https://via.tools/image-comprss.html" alt="Image Compressor">
           <h3>Image Compressor</h3>
           <p>Reduce image size without losing quality.</p>
           <a href="/image-compressor">Use Tool</a>
